--- a/src/main/resources/view/board-view.fxml
+++ b/src/main/resources/view/board-view.fxml
@@ -1,14 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="view.BoardView"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane prefHeight="469.0" prefWidth="450.0" stylesheets="@../styles/board.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.tictactoe.controller.BoardController">
+    <children>
+        <!-- Game Board Grid -->
+        <GridPane fx:id="gameBoard" gridLinesVisible="true" layoutX="25.0" layoutY="45.0" prefHeight="394.0" prefWidth="400.0" style="-fx-background-color: #fafafa; -fx-border-color: #333333; -fx-border-width: 2;">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" prefWidth="130.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" prefWidth="130.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" prefWidth="130.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="100.0" prefHeight="130.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="100.0" prefHeight="130.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="100.0" prefHeight="130.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+        </GridPane>
 
+        <!-- Status Message -->
+        <Label fx:id="statusMessage" layoutX="25.0" layoutY="12.0" prefHeight="25.0" prefWidth="400.0" styleClass="status-label" text="Player X's Turn" textFill="RED">
+         <font>
+            <Font name="Poppins Bold" size="14.0" />
+         </font></Label>
+
+    </children>
 </AnchorPane>
