--- a/src/main/resources/view/board-view.fxml
+++ b/src/main/resources/view/board-view.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -9,8 +12,27 @@
 
 <AnchorPane prefHeight="469.0" prefWidth="450.0" stylesheets="@../styles/board.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.tictactoe.controller.BoardController">
     <children>
+        <!-- Player Input Section -->
+        <Label layoutX="25.0" layoutY="10.0" text="Enter Player Name:" />
+        <TextField fx:id="playerNameField" layoutX="140.0" layoutY="10.0" prefWidth="150.0" />
+
+        <Label layoutX="25.0" layoutY="40.0" text="Choose Your Piece:" />
+        <ComboBox fx:id="pieceSelection" layoutX="140.0" layoutY="40.0" prefWidth="150.0">
+            <items>
+            </items>
+        </ComboBox>
+
+        <Label fx:id="statusMessage" layoutX="25.0" layoutY="80.0" prefHeight="25.0" prefWidth="400.0" styleClass="status-label" textFill="RED">
+            <font>
+                <Font name="Poppins Bold" size="14.0" />
+            </font>
+        </Label>
+
+        <!-- Start Game Button -->
+        <Button fx:id="startGameButton" layoutX="337.0" layoutY="27.0" onAction="#startGame" text="Start Game" />
+
         <!-- Game Board Grid -->
-        <GridPane fx:id="gameBoard" gridLinesVisible="true" layoutX="25.0" layoutY="45.0" prefHeight="394.0" prefWidth="400.0" style="-fx-background-color: #fafafa; -fx-border-color: #333333; -fx-border-width: 2;">
+        <GridPane fx:id="gameBoard" gridLinesVisible="true" layoutX="25.0" layoutY="150.0" prefHeight="394.0" prefWidth="400.0" style="-fx-background-color: #fafafa; -fx-border-color: #333333; -fx-border-width: 2;">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" prefWidth="130.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" prefWidth="130.0" />
@@ -22,12 +44,5 @@
                 <RowConstraints minHeight="100.0" prefHeight="130.0" vgrow="SOMETIMES" />
             </rowConstraints>
         </GridPane>
-
-        <!-- Status Message -->
-        <Label fx:id="statusMessage" layoutX="25.0" layoutY="12.0" prefHeight="25.0" prefWidth="400.0" styleClass="status-label" text="Player X's Turn" textFill="RED">
-         <font>
-            <Font name="Poppins Bold" size="14.0" />
-         </font></Label>
-
     </children>
 </AnchorPane>
