--- a/src/main/resources/view/board-view.fxml
+++ b/src/main/resources/view/board-view.fxml
@@ -10,19 +10,19 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="469.0" prefWidth="450.0" stylesheets="@../styles/board.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.tictactoe.controller.BoardController">
+<AnchorPane prefHeight="556.0" prefWidth="450.0" stylesheets="@../styles/board.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.tictactoe.controller.BoardController">
     <children>
         <!-- Player Input Section -->
-        <Label layoutX="25.0" layoutY="10.0" text="Enter Player Name:" />
-        <TextField fx:id="playerNameField" layoutX="140.0" layoutY="10.0" prefWidth="150.0" />
+        <Label layoutX="7.0" layoutY="17.0" text="Enter Player Name:" />
+        <TextField fx:id="playerNameField" layoutX="140.0" layoutY="11.0" prefHeight="30.0" prefWidth="150.0" />
 
-        <Label layoutX="25.0" layoutY="40.0" text="Choose Your Piece:" />
-        <ComboBox fx:id="pieceSelection" layoutX="140.0" layoutY="40.0" prefWidth="150.0">
+        <Label layoutX="6.0" layoutY="57.0" text="Choose Your Piece:" />
+        <ComboBox fx:id="pieceSelection" layoutX="140.0" layoutY="55.0" prefHeight="20.0" prefWidth="150.0" promptText="X | O">
             <items>
             </items>
         </ComboBox>
 
-        <Label fx:id="statusMessage" layoutX="25.0" layoutY="80.0" prefHeight="25.0" prefWidth="400.0" styleClass="status-label" textFill="RED">
+        <Label fx:id="statusMessage" layoutX="25.0" layoutY="92.0" prefHeight="25.0" prefWidth="400.0" styleClass="status-label" textFill="RED">
             <font>
                 <Font name="Poppins Bold" size="14.0" />
             </font>
@@ -43,6 +43,16 @@
                 <RowConstraints minHeight="100.0" prefHeight="130.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="100.0" prefHeight="130.0" vgrow="SOMETIMES" />
             </rowConstraints>
+            <!-- Adding Buttons for Tic Tac Toe -->
+            <Button fx:id="button00" onAction="#handleButtonClick" prefHeight="130.0" prefWidth="131.0" styleClass="game-button" />
+            <Button fx:id="button22" onAction="#handleButtonClick" prefHeight="136.0" prefWidth="144.0" styleClass="game-button" GridPane.rowIndex="1" />
+            <Button fx:id="button20" onAction="#handleButtonClick" prefHeight="149.0" prefWidth="194.0" styleClass="game-button" GridPane.rowIndex="2" />
+            <Button fx:id="button01" onAction="#handleButtonClick" prefHeight="166.0" prefWidth="162.0" styleClass="game-button" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Button fx:id="button02" onAction="#handleButtonClick" prefHeight="150.0" prefWidth="142.0" styleClass="game-button" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Button fx:id="button10" onAction="#handleButtonClick" prefHeight="138.0" prefWidth="144.0" styleClass="game-button" GridPane.columnIndex="2" />
+            <Button fx:id="button11" onAction="#handleButtonClick" prefHeight="146.0" prefWidth="145.0" styleClass="game-button" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Button fx:id="button12" onAction="#handleButtonClick" prefHeight="144.0" prefWidth="177.0" styleClass="game-button" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Button fx:id="button21" onAction="#handleButtonClick" prefHeight="134.0" prefWidth="138.0" styleClass="game-button" GridPane.columnIndex="1" />
         </GridPane>
     </children>
 </AnchorPane>
