filled correctly UI

--- a/src/main/resources/view/board-view.fxml
+++ b/src/main/resources/view/board-view.fxml
@@ -12,10 +12,10 @@
 <AnchorPane prefHeight="556.0" prefWidth="450.0" stylesheets="@../styles/board.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.assignment.tictactoe.controller.BoardController">
     <children>
         <!-- Player Input Section -->
-        <Label layoutX="7.0" layoutY="17.0" text="Enter Player Name:" />
-        <TextField fx:id="playerNameField" layoutX="140.0" layoutY="11.0" prefHeight="30.0" prefWidth="150.0" styleClass="text-field" />
+        <Label layoutX="7.0" layoutY="17.0" styleClass="player-label" text="Enter Player Name:" />
+        <TextField fx:id="playerNameField" layoutX="140.0" layoutY="11.0" prefHeight="30.0" prefWidth="150.0" promptText="Sachintha" styleClass="text-field" />
 
-        <Label layoutX="6.0" layoutY="57.0" text="Choose Your Piece:" />
+        <Label layoutX="6.0" layoutY="57.0" styleClass="player-label" text="Choose Your Piece:" />
         <ComboBox fx:id="pieceSelection" layoutX="140.0" layoutY="55.0" prefHeight="20.0" prefWidth="150.0" promptText="X | O" styleClass="combo-box">
             <items>
                 <!-- Items will be populated in the controller -->
@@ -40,15 +40,15 @@
                 <RowConstraints minHeight="100.0" prefHeight="130.0" vgrow="SOMETIMES" />
             </rowConstraints>
 
-            <Button fx:id="button00" onAction="#handleButtonClick" prefHeight="136.0" prefWidth="136.0" style="-fx-font-size: 64px; -fx-background-color: #f0f0f0; -fx-border-color: #5734b4; -fx-border-radius: 10px;" styleClass="custom-button" textFill="#d8a3d6" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-            <Button fx:id="button01" onAction="#handleButtonClick" prefHeight="136.0" prefWidth="136.0" style="-fx-font-size: 64px; -fx-background-color: #f0f0f0; -fx-border-color: #5734b4; -fx-border-radius: 10px;" styleClass="custom-button" textFill="#d8a3d6" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-            <Button fx:id="button02" onAction="#handleButtonClick" prefHeight="136.0" prefWidth="136.0" style="-fx-font-size: 64px; -fx-background-color: #f0f0f0; -fx-border-color: #5734b4; -fx-border-radius: 10px;" styleClass="custom-button" textFill="#d8a3d6" GridPane.columnIndex="2" GridPane.rowIndex="0" />
-            <Button fx:id="button10" onAction="#handleButtonClick" prefHeight="136.0" prefWidth="136.0" style="-fx-font-size: 64px; -fx-background-color: #f0f0f0; -fx-border-color: #5734b4; -fx-border-radius: 10px;" styleClass="custom-button" textFill="#d8a3d6" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-            <Button fx:id="button11" onAction="#handleButtonClick" prefHeight="136.0" prefWidth="136.0" style="-fx-font-size: 64px; -fx-background-color: #f0f0f0; -fx-border-color: #5734b4; -fx-border-radius: 10px;" styleClass="custom-button" textFill="#d8a3d6" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Button fx:id="button12" onAction="#handleButtonClick" prefHeight="136.0" prefWidth="136.0" style="-fx-font-size: 64px; -fx-background-color: #f0f0f0; -fx-border-color: #5734b4; -fx-border-radius: 10px;" styleClass="custom-button" textFill="#d8a3d6" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <Button fx:id="button20" onAction="#handleButtonClick" prefHeight="136.0" prefWidth="136.0" style="-fx-font-size: 64px; -fx-background-color: #f0f0f0; -fx-border-color: #5734b4; -fx-border-radius: 10px;" styleClass="custom-button" textFill="#d8a3d6" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-            <Button fx:id="button21" onAction="#handleButtonClick" prefHeight="136.0" prefWidth="136.0" style="-fx-font-size: 64px; -fx-background-color: #f0f0f0; -fx-border-color: #5734b4; -fx-border-radius: 10px;" styleClass="custom-button" textFill="#d8a3d6" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Button fx:id="button22" onAction="#handleButtonClick" prefHeight="136.0" prefWidth="136.0" style="-fx-font-size: 64px; -fx-background-color: #f0f0f0; -fx-border-color: #5734b4; -fx-border-radius: 10px;" styleClass="custom-button" textFill="#d8a3d6" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Button fx:id="button00" minHeight="130.0" minWidth="126.0" onAction="#handleButtonClick" prefHeight="130.0" prefWidth="126.0" styleClass="game-button" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+            <Button fx:id="button01" onAction="#handleButtonClick" prefHeight="186.0" prefWidth="186.0" styleClass="game-button" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+            <Button fx:id="button02" onAction="#handleButtonClick" prefHeight="136.0" prefWidth="136.0" styleClass="game-button" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+            <Button fx:id="button10" onAction="#handleButtonClick" prefHeight="136.0" prefWidth="136.0" styleClass="game-button" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+            <Button fx:id="button11" onAction="#handleButtonClick" prefHeight="136.0" prefWidth="136.0" styleClass="game-button" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Button fx:id="button12" onAction="#handleButtonClick" prefHeight="136.0" prefWidth="136.0" styleClass="game-button" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Button fx:id="button20" onAction="#handleButtonClick" prefHeight="136.0" prefWidth="136.0" styleClass="game-button" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+            <Button fx:id="button21" onAction="#handleButtonClick" prefHeight="136.0" prefWidth="136.0" styleClass="game-button" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Button fx:id="button22" onAction="#handleButtonClick" prefHeight="136.0" prefWidth="136.0" styleClass="game-button" GridPane.columnIndex="2" GridPane.rowIndex="2" />
         </GridPane>
     </children>
 </AnchorPane>
